[gd_scene load_steps=8 format=3 uid="uid://nxr8rseg5q8w"]

[ext_resource type="Script" uid="uid://ccilquqj852o" path="res://Scripts/ZESwitch.gd" id="1_miqxl"]
[ext_resource type="Texture2D" uid="uid://ca5necjstkbt8" path="res://Assets/ZESwitch.png" id="2_fx841"]
[ext_resource type="Script" uid="uid://uc065ctdh5hp" path="res://Scripts/ZESwitchArea.gd" id="3_7xl7m"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3fsxv"]
atlas = ExtResource("2_fx841")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5f87"]
atlas = ExtResource("2_fx841")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_yogdv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fsxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5f87")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1wmwe"]
size = Vector2(16, 16)

[node name="Switch" type="AnimatedSprite2D"]
sprite_frames = SubResource("SpriteFrames_yogdv")
script = ExtResource("1_miqxl")

[node name="SwitchArea" type="Area2D" parent="." groups=["ZEInteractable"]]
script = ExtResource("3_7xl7m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwitchArea"]
shape = SubResource("RectangleShape2D_1wmwe")

[connection signal="SwitchState" from="SwitchArea" to="." method="_on_switch_area_switch_state"]
